#+TITLE: Changelog

* Unreleased

** Added

- =Cask= file
- imenu support for headings
- =inform7-mode= for editing Inform 7 files
- support for detecting Inform 7 (=.ni=, =.i7=) and Inform 7
  extension (=.i7x=) files
- basic indentation
  - after a rule introduction
  - default tab width is now 4
  - free-form indentation in strings
- basic syntax highlighting
  - block comments
  - headings
  - quoted text
  - standard rules
  - text substitutions
- support for manipulating comments with =newcomment.el=
  (e.g., =comment-box=)

* 0.0.0 - 2020-04-12

** Added

- =CHANGELOG.org=
- =inform7.el=
- =LICENSE= (GPL-3.0)
- =README.org=